--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 Flask==2.3.2
+gunicorn==21.2.0
 scikit-learn==1.2.2
-xgboost==1.7.5
-joblib==1.3.1
+numpy==1.24.4
 pandas==2.0.3
-matplotlib==3.7.1
-seaborn==0.12.2
-
+joblib==1.2.0
